--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,54 +2,53 @@
 <html>
 
 <head>
-  <meta http-equiv="Content-Type" const="text/html;charset=UTF-8" />
-  <link href="http://fonts.googleapis.com/css?family=Comfortaa" rel="stylesheet" type="text/css">
-  <link rel="stylesheet" type="text/css" href="style.css">
+    <meta http-equiv="Content-Type" const="text/html;charset=UTF-8" />
+    <link href="http://fonts.googleapis.com/css?family=Comfortaa" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" type="text/css" href="style.css">
 
-  <!-- Export socket.io on client side -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.4/socket.io.js"></script>
+    <!-- Export socket.io on client side -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.4/socket.io.js"></script>
 
-  <title>Simple Chat App</title>
+    <title>Simple Chat App</title>
 </head>
 
 <body>
-  <header>
-    <h1>Simple Chat App</h1>
-  </header>
+    <header>
+        <h1>Simple Chat App</h1>
+    </header>
 
-  <section>
-    <div id="change_username">
-      <input id="username" type="text" />
-      <button id="send_username" type="button">Change username</button>
-    </div>
-  </section>
-
-  <section class="horizontal">
-    <section id="chatroom">
-      <% if (room) { %>
-        <h1><%= room %></h1>
-      <% } %>
-      <section id="feedback"></section>
-      <br><br><br>
+    <section>
+        <div id="create_room">
+            <input id="new_room" type="text" />
+            <button id="send_new_room" type="button">Create Room</button>
+        </div>
     </section>
-    <section id="roomlist">
-      <h1 style=>Room List</h1>
-      <br>
-      <button class="room" id="room1" onclick="location.href='./room1'">Room 1</button>
-      <button class="room" id="room2" onclick="location.href='./room2'">Room 2</button>
-      <button class="room" id="room3" onclick="location.href='./room3'">Room 3</button>
-      
+    <section class="horizontal">
+        <section id="chatroom">
+            <section id="feedback"></section>
+        </section>
+        <section id="roomlist">
+            <h1>Room List</h1>
+            <h2>Change your room to:</h2>
+            <select id="rooms">
+                <option selected="true" disabled="disabled">--Please choose a room--</option>
+                <option value="Public">Public</option>
+            </select>
+            <br><br>
+            <h1 id="currentRoom"></h1>
+        </section>
+
+        
     </section>
-  </section>
 
-  <section id="input_zone">
-    <input id="message" class="vertical-align" type="text" />
-    <button id="send_message" class="vertical-align" type="button">Send</button>
-  </section>
+    <section id="input_zone">
+        <input id="message" class="vertical-align" type="text" />
+        <button id="send_message" class="vertical-align" type="button">Send</button>
+    </section>
 
-  <!-- Export socket.io on client side -->
-  <script src="http://code.jquery.com/jquery-latest.min.js"></script>
-  <script src="chat.js"></script>
+    <!-- Export socket.io on client side -->
+    <script src="http://code.jquery.com/jquery-latest.min.js"></script>
+    <script src="chat.js"></script>
 </body>
 
 </html>
