--- a/public/style.css
+++ b/public/style.css
@@ -110,3 +110,15 @@ p.message#self{
     background-color: #81DAF5;
 }
 
+.loginPage {
+    background-color: #000;
+}
+
+.loginPage .form {
+    height: 100px;
+    margin-top: -100px;
+    position: absolute;
+    text-align: center;
+    top: 50%;
+    width: 100%;
+}
