--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,7 +4,7 @@
 <head>
     <meta http-equiv="Content-Type" const="text/html;charset=UTF-8" />
     <link href="http://fonts.googleapis.com/css?family=Comfortaa" rel="stylesheet" type="text/css">
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="styles.css">
 
     <!-- Export socket.io on client side -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.4/socket.io.js"></script>
@@ -13,40 +13,39 @@
 </head>
 
 <body>
-    <header>
-        <h1>Simple Chat App</h1>
-    </header>
-
     
-    <section>
-        <div id="create_room">
-            <input id="new_room" type="text" />
-            <button id="send_new_room" type="button">Create Room</button>
-        </div>
-    </section>
-    <section class="horizontal">
-        <section id="chatroom">
+    <div class="mainPage">
+        <header>
+            <h1>Simple Chat App</h1>
+        </header>
+        <section>
+            <div id="create_room">
+                <input id="new_room" type="text" />
+                <button id="send_new_room" type="button">Create Room</button>
+            </div>
+        </section>
+        <section class="horizontal">
             <section id="feedback"></section>
-        </section>
-        <section id="roomlist">
-            <h1>Room List</h1>
-            <h2>Join Room:</h2>
-            <select id="rooms">
-                <option selected="true" disabled="disabled">--Please choose a room--</option>
-                <option value="Public">Public</option>
-            </select>
-            <br><br>
-            <h1 id="currentRoom"></h1>
-            <h1 id="currentActive"></h1>
+            <section id="chatroom">
+            </section>
+            <section id="roomlist">
+                <h1>Room List</h1>
+                <h2>Join Room:</h2>
+                <select id="rooms">
+                    <option selected="true" disabled="disabled">--Please choose a room--</option>
+                    <option value="Public">Public</option>
+                </select>
+                <br><br>
+                <h1 id="currentRoom"></h1>
+                <h1 id="currentActive"></h1>
+            </section>
         </section>
 
-        
-    </section>
-
-    <section id="input_zone">
-        <input id="message" class="vertical-align" type="text" />
-        <button id="send_message" class="vertical-align" type="button">Send</button>
-    </section>
+        <section id="input_zone">
+            <input id="message" class="vertical-align" type="text" />
+            <button id="send_message" class="vertical-align" type="button">Send</button>
+        </section>
+    </div>
     <!-- Export socket.io on client side -->
     <script src="http://code.jquery.com/jquery-latest.min.js"></script>
     <script src="chat.js"></script>
