--- a/views/index.ejs
+++ b/views/index.ejs
@@ -35,7 +35,11 @@
                 <h2>Join Room:</h2>
                 <select id="rooms">
                     <option selected="true" disabled="disabled">--Please choose a room--</option>
-                    <option value="Public">Public</option>
+                    <option id="PublicRoom" value="Public">Public</option>
+                    <% rooms.forEach((room) => { %>
+                        <option id="<%= room.roomName %>Room" value="<%= room.roomName %>"><%= room.roomName %></option>
+                    <% }) %>
+
                 </select>
                 <br><br>
                 <h1 id="currentRoom"></h1>
