--- a/views/apiHomePage.ejs
+++ b/views/apiHomePage.ejs
@@ -1,27 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>API Page</title>
+    <style>
+        table {
+            font-family: arial, sans-serif;
+            border-collapse: collapse;
+            width: 100%;
+        }
+
+        td,
+        th {
+            border: 1px solid #dddddd;
+            text-align: left;
+            padding: 8px;
+        }
+
+        tr:nth-child(even) {
+            background-color: #dddddd;
+        }
+    </style>
 </head>
+
 <body>
-    <form action="api/eventlog" method = "get">
-        <button>Event Log History</button>
+    <form action="/api/eventlog" method="POST">
+        <button type="submit">Event Log History</button>
     </form>
 
-    <form action="api/history" method = "get">
+    <form action="/api/history" method="POST">
         <button>Message Log History</button>
     </form>
 
-    <form action="api/roomhistory/" method = "post">
-        <label>Choose a room:</label>
-        <select>
-            <% for(var i=0; i < data.length; i++) { %>
-                <option value= "<%= data[i].roomName %>" ><%= data[i].roomName %></option>
-            <% } %>
-        </select>
-        <input type="submit" value="Submit Room Name">
+    <% for(var i = 0 ; i< data.length;i++){ %>
+    <form method="post" action="api/roomhistory/<%=data[i].roomName %>">
+        <button type="submit"> <%=data[i].roomName %></button>
     </form>
+    <%}%>
+
 </body>
+
 </html>
