--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,6 +4,7 @@
     <link rel="stylesheet" type="text/css" href="styles.css">
     <!-- Export socket.io on client side -->
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.4/socket.io.js"></script> -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://mernsocketio.herokuapp.com/socket.io/socket.io.js"></script>
     <title>Simple Chat App</title>
 </head>
