--- a/views/register.ejs
+++ b/views/register.ejs
@@ -6,19 +6,12 @@
     <title>Simple Chat App</title>
 </head>
 <body>
-    <form action="/login/admin" method="POST">
+    <form action="/register" method="POST">
         <label for="username">Username:</label><br>
         <input type="text" id="username" name="username"><br>
         <label for="password">Password:</label><br>
         <input type="text" id="password" name="password" type="password"><br><br>
         <input type="submit" value="Login as Admin">
-    </form> 
-    <form action="/login/user" method="POST">
-        <label for="username">Username:</label><br>
-        <input type="text" id="username" name="username"><br>
-        <label for="password">Password:</label><br>
-        <input type="text" id="password" name="password" type="password"><br><br>
-        <input type="submit" value="Login as User">
-    </form> 
+    </form>
 </body>
 </html>
