--- a/back-end/views/index.ejs
+++ b/back-end/views/index.ejs
@@ -6,19 +6,6 @@
     <title>Simple Chat App</title>
 </head>
 <body>
-    <form action="/login/admin" method="POST">
-        <label for="username">Username:</label><br>
-        <input type="text" id="username" name="username"><br>
-        <label for="password">Password:</label><br>
-        <input type="text" id="password" name="password" type="password"><br><br>
-        <input type="submit" value="Login as Admin">
-    </form> 
-    <form action="/login/user" method="POST">
-        <label for="username">Username:</label><br>
-        <input type="text" id="username" name="username"><br>
-        <label for="password">Password:</label><br>
-        <input type="text" id="password" name="password" type="password"><br><br>
-        <input type="submit" value="Login as User">
-    </form> 
+    Chat app API
 </body>
 </html>
